Fix CSS hoverState on mobile

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -104,6 +104,8 @@ footer
       font-size 13px
       color #ffffff
     &:hover
+      p
+        color #ffffff
       color white
       background-color rgba(0, 0, 0, 0)
 
